tests/ui/ast_pool.stderr
error[E0505]: cannot move out of `args` because it is borrowed
  --> tests/ui/ast_pool.rs:12:10
   |
9  |     let args = vec![term1, term2];
   |         ---- binding `args` declared here
10 |     let pool = ast::pool(&loc, &args);
   |                                ----- borrow of `args` occurs here
11 |
12 |     drop(args);
   |          ^^^^ move out of `args` occurs here
13 |     println!("{:?}", pool);
   |                      ---- borrow later used here
